MB-57069: Upgrade GOVERSION to SUPPORTED_NEWER
This allows the GOVERSION to be managed in a central location and causes
the same version to be used throughout. Also means we won't have to keep
upgrading these fields as new go versions are released.

Change-Id: Ib1aeae84d766dd9c59499d1918fb8dbf228b2f46
Reviewed-on: https://review.couchbase.org/c/vbmap/+/191476
Well-Formed: Restriction Checker
Tested-by: Bryan McCoid <bryan.mccoid@couchbase.com>
Reviewed-by: Steve Watanabe <steve.watanabe@couchbase.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ GoModBuild(
   TARGET vbmap
   PACKAGE github.com/couchbase/vbmap
   INSTALL_PATH bin
-  GOVERSION 1.19)
+  GOVERSION SUPPORTED_NEWER)
