CBD-6269: Explicit declaration of 'go mod tidy' target
Change-Id: Ie79eaa689263273e4276782250f6c2060b5879ca
Reviewed-on: https://review.couchbase.org/c/vbmap/+/224904
Tested-by: Chris Hillery <ceej@couchbase.com>
Reviewed-by: Bryan McCoid <bryan.mccoid@couchbase.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,5 @@ GET_TARGET_PROPERTY (vbmap_exe vbmap GO_BINARY)
 CMAKE_PATH(GET vbmap_exe PARENT_PATH vbmap_bin_dir)
 SET(vbmap_BINARY_DIR ${vbmap_bin_dir} CACHE STRING
     "Path to vbmap binary directory")
+
+GoModTidySetup()
